# tsi-gpgpu

./: .gitignore  CMakeLists.txt  CudaVsOpenCL.md  Progress.md  README.md
Cuda/Samples/matrixMul/: matrixMul.cu
Cuda/Test/: hello.cu
Cuda/cuda-benchmarking/matrixMul/: Makefile  data.csv  matrixMul  matrixMul.cu
Cuda/cuda-benchmarking/matrixMulCUBLAS/: Makefile  matrixMulCUBLAS
Cuda/cuda-benchmarking/matrixMulDrv/: Makefile
Notes/: knn-brute-force.md
TechnoSoft/TechnoSoft-Build-Tests/Test-2014-05-12/: error-message-on-time-kd-search-variable-k.txt
TechnoSoft/TechnoSoft-Build-Tests/Test-2014-05-13/: test-on-n=20M-k=10-20140513.txt
TechnoSoft/TechnoSoft-Hardware-tests/2014-03-26/tsidt040w/: tsidt040w-run-info-01.txt
debug_utils/: run_test_loop
demo/: bitonic-sort-serial.c  kNN-brute-force-garcia.cu  kNN-brute-force.cu  knn-serial  knn-serial.c  makefile
demo/data/: knn_brute_force_6553_ref_points_1_query_point.data
dll_test/: CmakeLists.txt  hello.cu  hello.h  hello_world.cu
include/: README.md  knn.h  knn_gpgpu.h
learn-c-the-hard-way/: ex1
learn-c-the-hard-way/ex1/: ex1
learn-c-the-hard-way/ex2/: ex2  ex2.c
learn-c-the-hard-way/ex4/: ex4  ex4.c
notes/: analysis-of-options-for-acquiring-gpgpu-capabilities-at-ipm.md  kd-search-100.data  kd-search-20.data  standard_agreement_master_thesis_simen_haugerud_granlund.odt  standard_agreement_master_thesis_teodor_ande_elstad.odt  tree_build-100.data  tree_build-20.data
open-cl-benchmarking/matrix-multiplication/: batchrun.sh  blas-mult-matrix  blas-mult-matrix.c  makefile  mult-matrix  mult-matrix-kernel.cl  mult-matrix.c  opencl-mult-matrix  opencl-mult-matrix.c
open-cl-benchmarking/opencl-testing/: hello  makefile
report/: main.tex  setuplatex.html
report/Output/: main.fls
report/bib/: refbib.bib
report/gfx/: figure1.eps  ntnu_logo.eps
report/tex/: References.bib  abbreviations.tex  abstract.tex  appendix.tex  assignment.tex  background.tex  development_of_a_parallel_kd_search_algorithm.tex  development_of_a_parallel_kd_tree_build_algorithm.tex  docsetup.tex  final_results_discussion_and_conclusion.tex  glossaries.tex  introduction.tex  investigation_of_a_brute_force_approach_based_on_garcia.tex  list.tex  main.tex  parallelization_performance_increase.tex  part1_the_kbe_system.tex  part2_extending_aml.tex  part3_building_a_kbe_system.tex  part3_building_a_kbe_system.tex.orig  part4_discusion_and_concution.tex  preface.tex  references.tex  section2_the_quest_for_a_faster_knn_search.tex  summary.tex  the_quest_for_a_faster_kNN_search.tex  titlepage.tex
resources/: comparison-of-cuda-and-opencl.md
some-sublime-config-files/: c.sublime-build  cuda-c.sublime-build
src/common/: common-debug.cuh  helper_cuda.h  helper_string.h  utils.cu  utils.cuh
src/kNN/: CMakeLists.txt  README.md  bitonic-sort-serial.c  bitonic-sort-serial.h  data_types.h  kNN-brute-force-garcia.cu  kNN-brute-force-garcia.cuh  kNN-brute-force.cu  kNN-brute-force.cuh  kNN-brute-force_serial.c  kNN-brute-force_serial.h  point.h  stack.h
src/kNN/Garcia/KNN.CUDA.with.indexes/: knn_cuda_with_indexes_imporved.cu
src/kNN/brute-force/: kNN-brute-force-bitonic.cu  kNN-brute-force-bitonic.cuh  kNN-brute-force-garcia.cu  kNN-brute-force-garcia.cuh  kNN-brute-force-reduce.cu  kNN-brute-force-reduce.cuh  kNN-brute-force.cu  kNN-brute-force.cuh  reduction-mod.cu  reduction-mod.cuh  reduction.cu
src/kNN/brute-force/garcia/: knn_cublas_with_indexes.cu  knn_cublas_with_indexes_mod.cu  knn_cuda_with_indexes.cu  knn_cuda_with_indexes_mod.cu
src/kNN/common/: knn-common.cu  knn-common.cuh
src/kNN/from-scratch/: batchrun.sh  kd-tree  kd-tree-iterative  kd-tree-iterative.c  kd-tree-naive  kd-tree-naive.cu  kd-tree.c  knn-serial  knn-serial.c  makefile
src/kNN/garcia/: CMakeLists.txt  knn_cublas_with_indexes.cu  knn_cublas_with_indexes_mod.cu  knn_cuda_with_indexes.cu  knn_cuda_with_indexes_mod.cu
src/kNN/kd-tree/: batchrun.sh  cu-kd-search.cu  cu-kd-search.cuh  kd-search-openmp.cu  kd-search-openmp.cuh  kd-search.cu  kd-search.cuh  kd-tree-build.cu  kd-tree-build.cuh  kd-tree-iterative.c  kd-tree-naive.cu  kd-tree-naive.cuh  kd-tree.c  knn-serial.c  makefile  multiple-radix-select.cu  multiple-radix-select.cuh  quick-select.cu  quick-select.cuh  radix-select.cu  radix-select.cuh  search-iterative.cu  search-iterative.cu.orig  search-iterative.cuh  sum-reduction.cu
src/kNN/kernels/: common.cuh  kd-search.cu  kd-search.cuh  multiple-radix-select.cu  multiple-radix-select.cuh  quick-select.cu  quick-select.cuh  radix-select.cu  radix-select.cuh  reduction-mod.cu  reduction-mod.cuh  reduction.cu  reduction.cuh  sum-reduction.cu  sum-reduction.cuh
tests/: CMakeLists.txt
tests/common/: common-debug.c  common-debug.h  test-common.cu  test-common.cuh  test-common.h
tests/common/inc/: exception.h  helper_cuda.h
tests/data/: 10000_points.data  Profile kd-tree build with 10.000.000 elements.csv  kd-tree-build-gpu.csv
tests/kNN/: test-kNN-brute-force-garcia.cpp  test-kNN-brute-force.cpp  test.cpp  test_kNN-brute-force.cpp
tests/kNN/brute_force/: test-knn-brute-force-bitonic.cu  test-knn-brute-force-reduce-main.cu  test-knn-brute-force-reduce.cu  test-knn-brute-force.cu  test_knn_brute_force.cu
tests/kNN/kd-tree/: test-cu-kd-search.cu  test-kd-search-openmp.cu  test-kd-search.cu  test-kd-tree-build.cu  test-kd-tree-naive.cu  test-search-iterative.cu  test-search-iterative.cu.orig  test-search-rosetta.cu  time-brute-force-reduce.cu  time-kd-search-openmp.cu  time-kd-search-variable-k.cu  time-kd-search.cu  time-kd-tree-build.cu  time-kd-tree-naive.cu
tests/kNN/kernels/: test-kd-search.cu  test-multiple-radix-select.cu  test-quick-select.cu  test-radix-select.cu  test_redution.cu
tests/kNN/performance_tests/: knn-brute-force-performance-test.cu
tests/kNN/performance_tests/data/: garcia-knn-brute-force.csv  knn-brute-force-bitonic.csv  knn-brute-force-reduce-mod.csv  knn-brute-force-reduce.csv  knn-brute-force.csv
tests/lib/gtest-1.7.0/: CMakeLists.txt  aclocal.m4
tests/lib/gtest-1.7.0/include/gtest/: gtest-printers.h
(+22 files in other folders)
